--- a/index.html
+++ b/index.html
@@ -41,9 +41,11 @@
 
         <ul class="menu list">
           <li><a class="a" href="" target="">Studio</a></li>
+
           <li><a class="a" href="./portfolio.html" target="">Portfolio</a></li>
           <li><a class="a" href="" target="">Contacts</a></li>
         </ul>
+        <!-- <div class="hover-line"></div> -->
       </nav>
 
       <!-- CONTACT -->
