--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <!-- MENU -->
 
         <ul class="menu list">
-          <li><a class="a" href="" target="">Studio</a></li>
+          <li><a class="a" href="" target="">Studio!</a></li>
           <li><a class="a" href="./portfolio.html" target="">Portfolio</a></li>
           <li><a class="a" href="" target="">Contacts</a></li>
         </ul>
