--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
 
     <!-- GOOGLE STUFF  -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">ef=
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
@@ -30,69 +30,70 @@
                 <!-- LOGO -->
 
                 <div class="section-topline-logo">
-                    <a href=""><span class="logo-web">WEB</span><span class="logo-studio">STUDIO</span></a>
+                    <a class="a" href=""><span class="logo-web">WEB</span><span class="logo-studio">STUDIO</span></a>
                     <!-- MENU NAV -->
                 </div>
 
                 <nav>
                     <ul class="menu list">
-                        <li><a href="./index.html" target="">Studio</a></li>
-                        <li><a href="" target="">Portfolio</a></li>
-                        <li><a href="" target="">Contacts</a></li>
+                        <li><a class="a" href="./index.html" target="">Studio</a></li>
+                        <li><a class="a active" href="" target="">Portfolio</a></li>
+                        <li><a class="a" href="" target="">Contacts</a></li>
                     </ul>
                 </nav>
 
                 <!-- CONTACT -->
 
                 <ul class="contacts list">
-                    <li class="mail"><a href="mailto:info@devstudio.com" target="_blank">info@devstudio.com</a></li>
-                    <li class="telno"><a href="telno:+110001111111" target="_blank">+11 (000) 111-11-11</a></li>
+                    <li class="mail"><a class="a" href="mailto:info@devstudio.com" target="_blank">info@devstudio.com</a></li>
+                    <li class="telno"><a class="a" href="telno:+110001111111" target="_blank">+11 (000) 111-11-11</a></li>
                 </ul>
             </section>
         </div>
     </header>
 
-<footer>
-    <section class="section-footer">
-        <div class="caption">
-            <div>
-                <a href=""><span class="logo-web">WEB</span><span class="logo-studio">STUDIO</span></a>
+    <footer>
+        <section class="section-footer">
+            <div class="caption">
+                <div>
+                    <a class="a" href=""><span class="logo-web">WEB</span><span class="logo-studio">STUDIO</span></a>
 
-                <div class="paragraph">
-                    <p class="p">
-                        Increase the flow of customers and <br>
-                        sales for your business with digital <br>
-                        marketing & growth solutions.</p>
+                    <div class="paragraph">
+                        <p class="p">
+                            Increase the flow of customers and <br>
+                            sales for your business with digital <br>
+                            marketing & growth solutions.</p>
+                    </div>
+                </div>
+                <div class="social">
+                    <P style="color: white;">Social media</P>
+                    <div class="icons">
+                        <a class="a">
+                            <SVG width="24" height="24">
+                                <use HREF="./images/icons.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                        <a class="a">
+                            <svg width="24" height="24">
+                                <use HREF="./images/icons.svg#icon-twitterx"></use>
+                            </svg>
+                        </a>
+                        <a class="a">
+                            <svg width="24" height="24">
+                                <use HREF="./images/icons.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                        <a class="a">
+                            <svg width="24" height="24">
+                                <use HREF="./images/icons.svg#icon-linkedin2"></use>
+                            </svg>
+                        </a>
+                    </div>
                 </div>
             </div>
-            <div class="social">
-                <P style="color: white;">Social media</P>
-                <div class="icons">
-                    <a class="a">
-                        <SVG width="24" height="24">
-                            <use HREF="./images/icons.svg#icon-instagram"></use>
-                        </svg>
-                    </a>
-                    <a class="a">
-                        <svg width="24" height="24">
-                            <use HREF="./images/icons.svg#icon-twitterx"></use>
-                        </svg>
-                    </a>
-                    <a class="a">
-                        <svg width="24" height="24">
-                            <use HREF="./images/icons.svg#icon-facebook"></use>
-                        </svg>
-                    </a>
-                    <a class="a">
-                        <svg width="24" height="24">
-                            <use HREF="./images/icons.svg#icon-linkedin2"></use>
-                        </svg>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </section>
-</footer>
+        </section>
+
+            </footer>
 
 </body>
 
