modal and profile services

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 
 <body>
 
+<div>
+
   <header>
 
     <section class="section-topline">
@@ -68,9 +70,9 @@
 
           <div class="button-container">
             <button type="button" class="button data-modal-open"><span>Order Service</span></button>
-            <div class="modal">
-              <div class="data-modal">
-                <button type="button" class="data-modal-close">&times;</button>
+            <div class="data-modal">
+              <div class="btn-close">
+                <button type="button" class="data-modal-close btn-right">&times;</button>
               </div>
             </div>
           </div>
@@ -371,6 +373,7 @@
     </section>
   </footer>
   <script src="./js/modal.js"></script>
+</div>
 </body>
 
 </html>
