--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
 
     <!-- GOOGLE STUFF  -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="preconnect" href="https://fonts.googleapis.com">ef=
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
@@ -45,12 +45,118 @@
                 <!-- CONTACT -->
 
                 <ul class="contacts list">
-                    <li class="mail"><a class="a" href="mailto:info@devstudio.com" target="_blank">info@devstudio.com</a></li>
-                    <li class="telno"><a class="a" href="telno:+110001111111" target="_blank">+11 (000) 111-11-11</a></li>
+                    <li class="mail"><a class="a" href="mailto:info@devstudio.com"
+                            target="_blank">info@devstudio.com</a></li>
+                    <li class="telno"><a class="a" href="telno:+110001111111" target="_blank">+11 (000) 111-11-11</a>
+                    </li>
                 </ul>
             </section>
         </div>
     </header>
+
+    <section class="portfolio-services">
+
+        <div>
+
+            <ul class="list">
+                <li class="li">
+                    <div class="projects">
+                        <img src="./images/portfolio/img_banking_app.jpg" alt="banking app img" width="360"
+                            height="300">
+                        <div class="service-description">
+                            <h3>Banking App Interface Concept</h3>
+                            <p class="p">App</p>
+                        </div>
+                    </div>
+                </li>
+                <li class="li">
+                    <div class="projects">
+                        <img src="./images/portfolio/img_banking_app.jpg" alt="banking app img" width="360" height="300">
+                        <div class="service-description">
+                            <h3>Banking App Interface Concept</h3>
+                            <p class="p">App</p>
+                        </div>
+                    </div>
+                </li>
+                <li class="li">
+                    <div class="projects">
+                        <img src="./images/portfolio/img_meditation_app.jpg" alt="banking app img" width="360" height="300">
+                        <div class="service-description">
+                            <h3>Banking App Interface Concept</h3>
+                            <p class="p">App</p>
+                        </div>
+                    </div>
+                </li>
+
+            </ul>
+
+            <ul class="list">
+                <li class="li">
+                    <div class="projects">
+                        <img src="./images/portfolio/img_taxi_service_marketing.jpg" alt="banking app img" width="360" height="300">
+                        <div class="service-description">
+                            <h3>Banking App Interface Concept</h3>
+                            <p class="p">App</p>
+                        </div>
+                    </div>
+                </li>
+                <li class="li">
+                    <div class="projects">
+                        <img src="./images/portfolio/img_screen_illustrations_design.jpg" alt="banking app img" width="360" height="300">
+                        <div class="service-description">
+                            <h3>Banking App Interface Concept</h3>
+                            <p class="p">App</p>
+                        </div>
+                    </div>
+                </li>
+                <li class="li">
+                    <div class="projects">
+                        <img src="./images/portfolio/img_online_courses_marketing.jpg" alt="banking app img" width="360" height="300">
+                        <div class="service-description">
+                            <h3>Banking App Interface Concept</h3>
+                            <p class="p">App</p>
+                        </div>
+                    </div>
+                </li>
+            
+            </ul>
+            <ul class="list">
+                <li class="li">
+                    <div class="projects">
+                        <img src="./images/portfolio/img_instagram_design.jpg" alt="banking app img" width="360" height="300">
+                        <div class="service-description">
+                            <h3>Banking App Interface Concept</h3>
+                            <p class="p">App</p>
+                        </div>
+                    </div>
+                </li>
+                <li class="li">
+                    <div class="projects">
+                        <img src="./images/portfolio/img_ofood_website.jpg" alt="banking app img" width="360" height="300">
+                        <div class="service-description">
+                            <h3>Banking App Interface Concept</h3>
+                            <p class="p">App</p>
+                        </div>
+                    </div>
+                </li>
+                <li class="li">
+                    <div class="projects">
+                        <img src="./images/portfolio/img_fcoffee_website.jpg" alt="banking app img" width="360" height="300">
+                        <div class="service-description">
+                            <h3>Banking App Interface Concept</h3>
+                            <p class="p">App</p>
+                        </div>
+                    </div>
+                </li>
+            
+            </ul>
+
+        </div>
+
+
+    </section>
+
+
 
     <footer>
         <section class="section-footer">
@@ -93,7 +199,7 @@
             </div>
         </section>
 
-            </footer>
+    </footer>
 
 </body>
 
