--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
         <li class="mail"><a class="a" href="mailto:info@devstudio.com" target="_blank">info@devstudio.com</a></li>
         <li class="telno"><a class="a" href="telno:+110001111111" target="_blank">+11 (000) 111-11-11</a></li>
       </ul>
+
+     
     </section>
+    <div class="toplinebg"></div>
   </header>
 
   <main>
