--- a/portfolio.html
+++ b/portfolio.html
@@ -52,10 +52,10 @@
                 </ul>
 
             </section>
-           
+
 
         </div>
-<div class="toplinebg"></div>
+        <div class="toplinebg"></div>
     </header>
 
     <section class="portfolio-filters">
@@ -76,14 +76,19 @@
 
             <ul class="list">
                 <li class="li">
-                    <div class="projects">
+
+                    <div class="projects img1">
+                       
                         <img src="./images/portfolio/img_banking_app.jpg" alt="banking app img" width="360"
                             height="300">
+
                         <div class="service-description">
                             <h3>Banking App Interface Concept</h3>
                             <p class="p">App</p>
                         </div>
+                    <div class="box position"> </div>
                     </div>
+
                 </li>
                 <li class="li">
                     <div class="projects">
@@ -186,7 +191,7 @@
         <section class="section-footer">
             <div class="caption">
                 <div>
-                    <a class="a" href=""><span class="logo-web">WEB</span><span class="logo-studio">STUDIO</span></a>
+                    <a href=""><span class="logo-web">WEB</span><span class="logo-studio">STUDIO</span></a>
 
                     <div class="paragraph">
                         <p class="p">
