--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
 
                 <nav>
                     <ul class="menu list">
-                        <li><a class="a" href="./index.html" target="">Studio</a></li>
+                        <li><a class="a" href="./index.html" target="">Studio!</a></li>
                         <li><a class="a active" href="" target="">Portfolio</a></li>
                         <li><a class="a" href="" target="">Contacts</a></li>
                     </ul>
@@ -77,35 +77,66 @@
             <ul class="list">
                 <li class="li">
 
-                    <div class="projects img1">
-                       
-                        <img src="./images/portfolio/img_banking_app.jpg" alt="banking app img" width="360"
-                            height="300">
-
-                        <div class="service-description">
-                            <h3>Banking App Interface Concept</h3>
-                            <p class="p">App</p>
-                        </div>
-                    <div class="box position"> </div>
-                    </div>
-
-                </li>
-                <li class="li">
                     <div class="projects">
-                        <img src="./images/portfolio/img_banking_app.jpg" alt="banking app img" width="360"
-                            height="300">
+                        <div class="box">
+                            <img src="./images/portfolio/img_banking_app.jpg" alt="banking app img" width="360"
+                                height="300">
+                            <div class="overlay">
+                                <p class="overlay-p">
+                                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                                    Tracker App · Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App
+                                </p>
+                            </div>
+                        </div>
                         <div class="service-description">
                             <h3>Banking App Interface Concept</h3>
                             <p class="p">App</p>
                         </div>
                     </div>
+
                 </li>
+
+
+                <li class="li">
+
+                    <div class="projects">
+                        <div class="box">
+                            <img src="./images/portfolio/img_banking_app.jpg" alt="banking app img" width="360"
+                                height="300">
+                            <div class="overlay">
+                                <p class="overlay-p">
+                                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                                    Tracker App · Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="service-description">
+                            <h3>Cashless Payment</h3>
+                            <p class="p">Marketing</p>
+                        </div>
+                    </div>
+                </li>
+
+
                 <li class="li">
                     <div class="projects">
-                        <img src="./images/portfolio/img_meditation_app.jpg" alt="banking app img" width="360"
-                            height="300">
+                        <div class="box">
+                            <img src="./images/portfolio/img_meditation_app.jpg" alt="banking app img" width="360"
+                                height="300">
+                            <div class="overlay">
+                                <p class="overlay-p">
+                                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                                    Tracker App · Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App
+                                </p>
+                            </div>
+                        </div>
+
                         <div class="service-description">
-                            <h3>Banking App Interface Concept</h3>
+                            <h3>Meditation App</h3>
                             <p class="p">App</p>
                         </div>
                     </div>
@@ -116,76 +147,134 @@
             <ul class="list">
                 <li class="li">
                     <div class="projects">
-                        <img src="./images/portfolio/img_taxi_service_marketing.jpg" alt="banking app img" width="360"
-                            height="300">
+                        <div class="box">
+                            <img src="./images/portfolio/img_taxi_service_marketing.jpg" alt="banking app img"
+                                width="360" height="300">
+                            <div class="overlay">
+                                <p class="overlay-p">
+                                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                                    Tracker App · Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App
+                                </p>
+                            </div>
+                        </div>
+
                         <div class="service-description">
-                            <h3>Banking App Interface Concept</h3>
-                            <p class="p">App</p>
+                            <h3>Taxi Service</h3>
+                            <p class="p">Marketing</p>
+                        </div>
+                    </div>
+                </li>
+
+                <li class="li">
+                    <div class="projects">
+                        <div class="box">
+                            <img src="./images/portfolio/img_screen_illustrations_design.jpg" alt="banking app img"
+                                width="360" height="300">
+                            <div class="overlay">
+                                <p class="overlay-p">
+                                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                                    Tracker App · Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="service-description">
+                            <h3>Screen Illustrations Design</h3>
+                            <p class="p">Design</p>
                         </div>
                     </div>
                 </li>
                 <li class="li">
                     <div class="projects">
-                        <img src="./images/portfolio/img_screen_illustrations_design.jpg" alt="banking app img"
-                            width="360" height="300">
-                        <div class="service-description">
-                            <h3>Banking App Interface Concept</h3>
-                            <p class="p">App</p>
+                        <div class="box">
+                            <img src="./images/portfolio/img_online_courses_marketing.jpg" alt="banking app img"
+                                width="360" height="300">
+                            <div class="overlay">
+                                <p class="overlay-p">
+                                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                                    Tracker App · Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App
+                                </p>
+                            </div>
                         </div>
-                    </div>
-                </li>
-                <li class="li">
-                    <div class="projects">
-                        <img src="./images/portfolio/img_online_courses_marketing.jpg" alt="banking app img" width="360"
-                            height="300">
+
                         <div class="service-description">
-                            <h3>Banking App Interface Concept</h3>
-                            <p class="p">App</p>
+                            <h3>Online Courses</h3>
+                            <p class="p">Marketing</p>
                         </div>
                     </div>
                 </li>
 
             </ul>
+
+
             <ul class="list">
                 <li class="li">
                     <div class="projects">
-                        <img src="./images/portfolio/img_instagram_design.jpg" alt="banking app img" width="360"
-                            height="300">
+                        <div class="box">
+                            <img src="./images/portfolio/img_instagram_design.jpg" alt="banking app img" width="360"
+                                height="300">
+                            <div class="overlay">
+                                <p class="overlay-p">
+                                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                                    Tracker App · Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App
+                                </p>
+                            </div>
+                        </div>
+
                         <div class="service-description">
-                            <h3>Banking App Interface Concept</h3>
-                            <p class="p">App</p>
+                            <h3>Instagram Stories Concept</h3>
+                            <p class="p">Design</p>
                         </div>
                     </div>
                 </li>
                 <li class="li">
                     <div class="projects">
-                        <img src="./images/portfolio/img_ofood_website.jpg" alt="banking app img" width="360"
-                            height="300">
-                        <div class="service-description">
-                            <h3>Banking App Interface Concept</h3>
-                            <p class="p">App</p>
+                        <div class="box">
+                            <img src="./images/portfolio/img_ofood_website.jpg" alt="banking app img" width="360"
+                                height="300">
+                            <div class="overlay">
+                                <p class="overlay-p">
+                                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                                    Tracker App · Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App
+                                </p>
+                            </div>
+
                         </div>
-                    </div>
-                </li>
-                <li class="li">
-                    <div class="projects">
-                        <img src="./images/portfolio/img_fcoffee_website.jpg" alt="banking app img" width="360"
-                            height="300">
                         <div class="service-description">
-                            <h3>Banking App Interface Concept</h3>
-                            <p class="p">App</p>
+                            <h3>Organic Food</h3>
+                            <p class="p">Web Site</p>
                         </div>
                     </div>
                 </li>
 
+                <li class="li">
+                    <div class="projects">
+                        <div class="box">
+                            <img src="./images/portfolio/img_fcoffee_website.jpg" alt="banking app img" width="360"
+                                height="300">
+                            <div class="overlay">
+                                <p class="overlay-p">
+                                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                                    Tracker App · Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="service-description">
+                            <h3>FreshCoffee</h3>
+                            <p class="p">Web Site</p>
+                        </div>
+                    </div>
+                </li>
             </ul>
-
         </div>
-
-
     </section>
-
-
 
     <footer>
         <section class="section-footer">
