--- a/portfolio.html
+++ b/portfolio.html
@@ -23,38 +23,38 @@
 
 <body>
     <header>
-        <div class="border">
-            <section class="section-topline">
-                <!-- TOP LINE -->
 
-                <!-- LOGO -->
+        <section class="section-topline">
+            <!-- TOP LINE -->
 
-                <div class="section-topline-logo">
-                    <a class="a" href=""><span class="logo-web">WEB</span><span class="logo-studio">STUDIO</span></a>
-                    <!-- MENU NAV -->
-                </div>
+            <!-- LOGO -->
 
-                <nav>
-                    <ul class="menu list">
-                        <li><a class="a" href="./index.html" target="">Studio!</a></li>
-                        <li><a class="a active" href="" target="">Portfolio</a></li>
-                        <li><a class="a" href="" target="">Contacts</a></li>
-                    </ul>
-                </nav>
+            <div class="section-topline-logo">
+                <a class="a" href=""><span class="logo-web">WEB</span><span class="logo-studio">STUDIO</span></a>
 
-                <!-- CONTACT -->
+            </div>
 
-                <ul class="contacts list">
-                    <li class="mail"><a class="a" href="mailto:info@devstudio.com"
-                            target="_blank">info@devstudio.com</a></li>
-                    <li class="telno"><a class="a" href="telno:+110001111111" target="_blank">+11 (000) 111-11-11</a>
-                    </li>
+            <nav>
+
+                <!-- MENU -->
+
+                <ul class="menu list">
+                    <li><a class="a" href="./index.html" target="">Studio</a></li>
+                    <li><a class="a active" href="" target="">Portfolio</a></li>
+                    <li><a class="a" href="" target="">Contacts</a></li>
                 </ul>
+                <!-- <div class="hover-line"></div> -->
+            </nav>
 
-            </section>
+            <!-- CONTACT -->
+            <ul class="contacts list">
+                <li class="mail"><a class="a" href="mailto:info@devstudio.com" target="_blank">info@devstudio.com</a>
+                </li>
+                <li class="telno"><a class="a" href="telno:+110001111111" target="_blank">+11 (000) 111-11-11</a></li>
+            </ul>
 
 
-        </div>
+        </section>
         <div class="toplinebg"></div>
     </header>
 
