--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <!-- LOGO -->
 
-        <div class="section-topline-logo">
+        <div class="logo">
           <a class="a" href=""><span class="logo-web">WEB</span><span class="logo-studio">STUDIO</span></a>
 
         </div>
